--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "risco-lan-bridge",
+  "name": "@vanackej/risco-lan-bridge",
   "displayName": "Risco Lan Bridge",
   "version": "0.10.5",
   "description": "Risco Lan Bridge allows direct communication with most Risco control panels. It allows you to recover in real time the state of your system and to perform the arming/disarming functions or the inhibition of the detection zones.",
