--- a/package.json
+++ b/package.json
@@ -1,16 +1,22 @@
 {
   "name": "@vanackej/risco-lan-bridge",
   "displayName": "Risco Lan Bridge",
-  "version": "0.10.8",
+  "version": "0.11.0-beta1",
+  "main": "dist/index.js",
+  "module": "dist/risco-local-bridge.esm.js",
+  "typings": "dist/index.d.ts",
   "description": "Risco Lan Bridge allows direct communication with most Risco control panels. It allows you to recover in real time the state of your system and to perform the arming/disarming functions or the inhibition of the detection zones.",
-  "main": "index.js",
   "directories": {
     "doc": "doc",
     "example": "examples",
-    "lib": "lib"
+    "lib": "dist"
   },
+  "files": [
+    "dist",
+    "src"
+  ],
   "engines": {
-    "node": ">=10.24.1"
+    "node": ">=10"
   },
   "publishConfig": {
     "cache": "~/.npm",
@@ -24,7 +30,12 @@
     "url": "https://github.com/vanackej/risco-lan-bridge/issues"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "tsc",
+    "watch": "tsc-watch",
+    "lint": "eslint src --ext .ts",
+    "test": "jest --detectOpenHandles",
+    "testw": "jest --watch",
+    "watch-dist": "onchange -i 'dist/**' -- cp -R dist ../risco-mqtt-home-assistant/node_modules/@vanackej/risco-lan-bridge"
   },
   "keywords": [
     "risco",
@@ -38,8 +49,45 @@
     "prosysplus",
     "gtplus"
   ],
-  "author": "TJForc <tjforc@tutanota.com> (https://github.com/TJForc)",
-  "contributors": ["vanackej (https://github.com/vanackej)"],
+  "author": "Johann Vanackere <johann.vanackere@gmail.com>",
   "license": "MIT",
-  "homepage": "https://github.com/vanackej/risco-lan-bridge#readme"
+  "homepage": "https://github.com/vanackej/risco-lan-bridge#readme",
+  "prettier": {
+    "printWidth": 80,
+    "semi": true,
+    "singleQuote": true,
+    "trailingComma": "es5"
+  },
+  "size-limit": [
+    {
+      "path": "dist/mylib.cjs.production.min.js",
+      "limit": "10 KB"
+    },
+    {
+      "path": "dist/mylib.esm.js",
+      "limit": "10 KB"
+    }
+  ],
+  "devDependencies": {
+    "@tsconfig/recommended": "^1.0.1",
+    "@types/jest": "^27.0.3",
+    "@types/node": "^17.0.2",
+    "@typescript-eslint/eslint-plugin": "^5.8.0",
+    "@typescript-eslint/parser": "^5.8.0",
+    "eslint": "^8.5.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-import": "^2.25.3",
+    "jest": "^27.4.5",
+    "onchange": "^7.1.0",
+    "prettier": "^2.5.1",
+    "rimraf": "^3.0.2",
+    "ts-jest": "^27.1.2",
+    "tsc-watch": "^4.6.0",
+    "tsdx": "^0.14.1",
+    "typescript": "^4.5.4"
+  },
+  "dependencies": {
+    "tiny-typed-emitter": "^2.1.0",
+    "tslib": "^2.3.1"
+  }
 }
