Add option to log commands to a file Internal rCrypt management in RiscoBaseSocket Improve panelId and password discovery and memorization on reconnection Add runnable main for easier testing Throw errors when command fails to execute

--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "lint": "eslint src --ext .ts",
     "test": "jest --detectOpenHandles",
     "testw": "jest --watch",
+    "run": "tsc && node ./dist/main.js",
     "watch-dist": "onchange -i 'dist/**' -- cp -R dist ../risco-mqtt-home-assistant/node_modules/@vanackej/risco-lan-bridge"
   },
   "keywords": [
