--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@markxroberts/risco-lan-bridge",
   "displayName": "Risco Lan Bridge",
-  "version": "0.14.5-b",
+  "version": "0.14.5",
   "typings": "dist/index.d.ts",
   "description": "Risco Lan Bridge allows direct communication with most Risco control panels. It allows you to recover in real time the state of your system and to perform the arming/disarming functions or the inhibition of the detection zones.",
   "directories": {
@@ -48,9 +48,9 @@
     "prosysplus",
     "gtplus"
   ],
-  "author": "Johann Vanackere <johann.vanackere@gmail.com>",
+  "author": "Mark Roberts <mark.roberts30@gmail.com",
   "license": "MIT",
-  "homepage": "https://github.com/markxrobertsj/risco-lan-bridge#readme",
+  "homepage": "https://github.com/markxroberts/risco-lan-bridge#readme",
   "devDependencies": {
     "@tsconfig/recommended": "^1.0.1",
     "@types/jest": "^27.0.3",
